crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/invalid_function_type_visibility/return_type/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6012] Error: Invalid visibility, can only be "external" or "internal".
   ╭─[input.sol:5:36]
   │
 5 │     function f() external returns (function (uint256) private) {}
   │                                    ─────────────┬─────────────  
   │                                                 ╰─────────────── Error occurred here.
───╯
